--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 authors = ["ftilde <ftilde@protonmail.com>"]
 
 [dependencies]
-ndarray = "0.6"
+ndarray = "^0.8"
 smallvec = "0.3"
 syntect = "1.0"
 #termion = "^1.1"
