--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,12 +7,11 @@ authors = ["ftilde <ftilde@protonmail.com>"]
 ndarray = "^0.8"
 smallvec = "0.3"
 syntect = "1.0"
-#termion = "^1.1"
 unicode-segmentation = "1.0"
 unicode-width = "0.1"
 
-[dependencies.termion]
-git = "https://github.com/ftilde/termion"
-
+termion = "^1.3"
+#[dependencies.termion]
+#git = "https://github.com/ftilde/termion"
 #[dependencies.termion]
 #path = "../termion/"
