--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 authors = ["ftilde <ftilde@protonmail.com>"]
 
 [dependencies]
+json = "^0.11" #For JsonViewer
 ndarray = "^0.8"
 smallvec = "0.3"
 syntect = "1.0"
