Perform vte and ansi parsing using code from alacritty

--- a/terminal/Cargo.toml
+++ b/terminal/Cargo.toml
@@ -6,6 +6,7 @@ authors = ["ftilde <ftilde@protonmail.com>"]
 [dependencies]
 nix = "^0.7"
 libc = "^0.2"
+vte = "0.3"
 
 [dependencies.unsegen]
 path = "../"
