Add raw input to unsegen and use it to pass all remaining events to the tty
Currently this is based on a unsegen fork. The modifications will hopefully be upstreamed soon.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,8 +10,8 @@ syntect = "1.0"
 unicode-segmentation = "1.0"
 unicode-width = "0.1"
 
-termion = "^1.3"
+#termion = "^1.3"
+[dependencies.termion]
+git = "https://github.com/ftilde/termion"
 #[dependencies.termion]
-#git = "https://github.com/ftilde/termion"
-#[dependencies.termion]
-#path = "../termion/"
+#path = "../../termion/"
