Unify dependency version specification all Cargo.toml

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,13 +4,13 @@ version = "0.1.0"
 authors = ["ftilde <ftilde@protonmail.com>"]
 
 [dependencies]
-ndarray = "^0.8"
+ndarray = "0.8"
 smallvec = "0.3"
 syntect = "1.0"
 unicode-segmentation = "1.0"
 unicode-width = "0.1"
 
-#termion = "^1.3"
+#termion = "1.3"
 [dependencies.termion]
 git = "https://github.com/ftilde/termion"
 #[dependencies.termion]
