--- a/jsonviewer/Cargo.toml
+++ b/jsonviewer/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 authors = ["ftilde <ftilde@protonmail.com>"]
 
 [dependencies]
-json = "^0.11"
+json = "0.11"
 
 [dependencies.unsegen]
 path = "../"
