--- a/terminal/Cargo.toml
+++ b/terminal/Cargo.toml
@@ -4,8 +4,8 @@ version = "0.1.0"
 authors = ["ftilde <ftilde@protonmail.com>"]
 
 [dependencies]
-nix = "^0.7"
-libc = "^0.2"
+nix = "0.7"
+libc = "0.2"
 vte = "0.3"
 
 [dependencies.unsegen]
