--- a/unsegen_jsonviewer/Cargo.toml
+++ b/unsegen_jsonviewer/Cargo.toml
@@ -1,12 +1,10 @@
 [package]
-name = "unsegen-terminal"
+name = "unsegen_jsonviewer"
 version = "0.0.1"
 authors = ["ftilde <ftilde@protonmail.com>"]
 
 [dependencies]
-nix = "0.7"
-libc = "0.2"
-vte = "0.3"
+json = "0.11"
 
 [dependencies.unsegen]
 path = ".."
