--- a/unsegen_pager/Cargo.toml
+++ b/unsegen_pager/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
-name = "unsegen-jsonviewer"
-version = "0.0.1"
+name = "unsegen_pager"
+version = "0.1.0"
 authors = ["ftilde <ftilde@protonmail.com>"]
 
 [dependencies]
-json = "0.11"
+syntect = "2.0"
 
 [dependencies.unsegen]
 path = ".."
