--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ keywords = ["terminal", "tui"]
 [dependencies]
 ndarray = "0.8"
 nix = "0.8"
+raw_tty = "0.1"
 smallvec = "0.3"
 termion = "1.5"
 unicode-segmentation = "1.0"
