--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ smallvec = "0.3"
 termion = "1.5"
 unicode-segmentation = "1.0"
 unicode-width = "0.1"
+ropey = "1.3"
 
 [dev-dependencies]
 rand = "0.4"
