--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "unsegen"
 version = "0.3.0"
-authors = ["ftilde <ftilde@protonmail.com>"]
+authors = ["ftilde <ftilde@tamepointer.de>"]
 
 description = "Another tui library"
 documentation = "https://docs.rs/unsegen"
